[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/tank_on_grid.gd" type="Script" id=1]
[ext_resource path="res://textures/greenTank.tex" type="Texture" id=2]
[ext_resource path="res://textures/spark.png" type="Texture" id=3]
[ext_resource path="res://sounds/fire01.smp" type="Sample" id=4]
[ext_resource path="res://sounds/engine01.smp" type="Sample" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.8765, 31.3671 )

[sub_resource type="Animation" id=2]

length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="SampleLibrary" id=3]

samples/fire = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="SampleLibrary" id=4]

samples/engine = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/fire = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="Animation" id=5]

resource/name = "fire"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:enabled")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="tank" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 5
collision/mask = 5
collision/margin = 0.08
script/script = ExtResource( 1 )
type = 0
lavel = 0

[node name="rays" type="Node2D" parent="."]

editor/display_folded = true

[node name="rayDown" type="RayCast2D" parent="rays"]

transform/pos = Vector2( -13, 0 )
enabled = true
cast_to = Vector2( 0, 64 )
layer_mask = 1
type_mask = 15

[node name="rayDown1" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 13, 0 )
enabled = true
cast_to = Vector2( 0, 64 )
layer_mask = 1
type_mask = 15

[node name="rayUp" type="RayCast2D" parent="rays"]

transform/pos = Vector2( -13, 0 )
enabled = true
cast_to = Vector2( 0, -64 )
layer_mask = 1
type_mask = 15

[node name="rayUp1" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 13, 0 )
enabled = true
cast_to = Vector2( 0, -64 )
layer_mask = 1
type_mask = 15

[node name="rayRight" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 0, -13 )
enabled = true
cast_to = Vector2( 64, 0 )
layer_mask = 1
type_mask = 15

[node name="rayRight1" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 0, 13 )
enabled = true
cast_to = Vector2( 64, 0 )
layer_mask = 1
type_mask = 15

[node name="rayLeft" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 0, 13 )
enabled = true
cast_to = Vector2( -64, 0 )
layer_mask = 1
type_mask = 15

[node name="rayLeft1" type="RayCast2D" parent="rays"]

transform/pos = Vector2( 0, -13 )
enabled = true
cast_to = Vector2( -64, 0 )
layer_mask = 1
type_mask = 15

[node name="Sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Light2D" type="Light2D" parent="Sprite"]

transform/pos = Vector2( -0.00012207, -127.049 )
transform/scale = Vector2( 4, 4 )
enabled = false
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 0.832031, 0.52977, 0.52977, 1 )
energy = 2.0
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 1
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="muzzle" type="Position2D" parent="Sprite"]

transform/pos = Vector2( 0, -132 )
transform/scale = Vector2( 4, 4 )

[node name="tracksAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/tracks = SubResource( 2 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[node name="fire" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 3 )
default/volume_db = -80.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="engine" type="SamplePlayer" parent="."]

config/polyphony = 4
config/samples = SubResource( 4 )
default/volume_db = -20.0
default/pitch_scale = 0.8
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="fireAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fire = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="cooldown" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="step" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="fireTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]

[connection signal="timeout" from="step" to="." method="_on_step_timeout"]

[connection signal="timeout" from="fireTimer" to="." method="_on_fireTimer_timeout"]


